chore: add riptide, wavelength, and luminosity makes moves miami

--- a/site/index.html
+++ b/site/index.html
@@ -41,7 +41,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Chantilly, VA">
         Chantilly, VA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 892
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 895
     </p>
     <hr>
     <div class="buttons">
@@ -90,6 +90,114 @@
     </div>
   </div>
 </div>
+<div class="card" data-start-time="1725627600" data-end-time="1725854340">
+  <img src="assets/cards/riptide20245.webp" alt="Riptide 2024 banner image" class="image">
+  <div class="card-content">
+    <h2>Riptide 2024</h2>
+    <h4>September 06 - September 08</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>Plup</li>
+        <li>Trif</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Wizzrobe</li>
+        <li>Zuppy</li>
+      </ul>
+    </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=7000%20Kalahari%20Dr%2C%20Sandusky%2C%20OH%2044870%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Sandusky, OH">
+        Sandusky, OH
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 387
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/riptide-2024-5/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Riptide 2024">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Riptide 2024">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Riptide 2024">Stream</a>
+    </div>
+  </div>
+</div>
+<div class="card" data-start-time="1728129600" data-end-time="1728273540">
+  <img src="assets/cards/wavelength2024.webp" alt="Wavelength 2024 banner image" class="image">
+  <div class="card-content">
+    <h2>Wavelength 2024</h2>
+    <h4>October 05 - October 06</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=219%20Littleton%20Rd%2C%20Westford%2C%20MA%2001886%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Westford, MA">
+        Westford, MA
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/wavelength-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Wavelength 2024">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Wavelength 2024">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Wavelength 2024">Stream</a>
+    </div>
+  </div>
+</div>
+<div class="card" data-start-time="1730473200" data-end-time="1730692800">
+  <img src="assets/cards/luminosityMakesMovesMiami2024.webp" alt="Luminosity Makes Moves Miami 2024 banner image" class="image">
+  <div class="card-content">
+    <h2>Luminosity Makes Moves Miami 2024</h2>
+    <h4>November 01 - November 03</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=16701%20Collins%20Ave%2C%20Sunny%20Isles%20Beach%2C%20FL%2033160%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Sunny Isles Beach, FL">
+        Sunny Isles Beach, FL
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/luminosity-makes-moves-miami-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Luminosity Makes Moves Miami 2024">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Luminosity Makes Moves Miami 2024">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Luminosity Makes Moves Miami 2024">Stream</a>
+    </div>
+  </div>
+</div>
 <div class="card" data-start-time="1731772800" data-end-time="1731913200">
   <img src="assets/cards/donTParkOnTheGrass2024.webp" alt="Don't Park on the Grass 2024 banner image" class="image">
   <div class="card-content">
@@ -113,7 +221,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Seattle, WA">
         Seattle, WA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 392
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 394
     </p>
     <hr>
     <div class="buttons">
