chore: add galint melee open and pataka esports festival

--- a/site/index.html
+++ b/site/index.html
@@ -41,7 +41,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Chantilly, VA">
         Chantilly, VA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 895
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 905
     </p>
     <hr>
     <div class="buttons">
@@ -90,6 +90,42 @@
     </div>
   </div>
 </div>
+<div class="card" data-start-time="1725087600" data-end-time="1725249600">
+  <img src="assets/cards/galintMeleeOpen2024.webp" alt="Galint Melee Open 2024 banner image" class="image">
+  <div class="card-content">
+    <h2>Galint Melee Open 2024</h2>
+    <h4>August 31 - September 01</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Soonsay</li>
+        <li>Skerzo</li>
+        <li>Zeo</li>
+        <li>TBD</li>
+        <li>Junebug</li>
+        <li>Chango</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4211%20No.%203%20Rd%2C%20Richmond%2C%20BC%20V6X%202C3%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Richmond, BC">
+        Richmond, BC
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/galint-melee-open-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Galint Melee Open 2024">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Galint Melee Open 2024">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Galint Melee Open 2024">Stream</a>
+    </div>
+  </div>
+</div>
 <div class="card" data-start-time="1725627600" data-end-time="1725854340">
   <img src="assets/cards/riptide20245.webp" alt="Riptide 2024 banner image" class="image">
   <div class="card-content">
@@ -113,7 +149,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=7000%20Kalahari%20Dr%2C%20Sandusky%2C%20OH%2044870%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Sandusky, OH">
         Sandusky, OH
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 387
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 400
     </p>
     <hr>
     <div class="buttons">
@@ -162,6 +198,42 @@
     </div>
   </div>
 </div>
+<div class="card" data-start-time="1729357200" data-end-time="1729486800">
+  <img src="assets/cards/patakaEsportsFestival.webp" alt="Pataka Esports Festival banner image" class="image">
+  <div class="card-content">
+    <h2>Pataka Esports Festival</h2>
+    <h4>October 19 - October 20</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=12025%20Nordel%20Way%20Unit%20201%2C%20Surrey%2C%20BC%20V3W%201W1%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Surrey, BC">
+        Surrey, BC
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/pataka-esports-festival/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Pataka Esports Festival">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Pataka Esports Festival">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Pataka Esports Festival">Stream</a>
+    </div>
+  </div>
+</div>
 <div class="card" data-start-time="1730473200" data-end-time="1730692800">
   <img src="assets/cards/luminosityMakesMovesMiami2024.webp" alt="Luminosity Makes Moves Miami 2024 banner image" class="image">
   <div class="card-content">
@@ -207,13 +279,13 @@
       <u>Featured Players</u>
       <ul class="featured-players-columns">
         <li>Cody Schwab</li>
+        <li>Plup</li>
         <li>Wizzrobe</li>
         <li>Zamu</li>
-        <li>Fiction</li>
-        <li>Plup</li>
+        <li>Jmook</li>
+        <li>aMSa</li>
         <li>Salt</li>
         <li>Spark</li>
-        <li>Krudo</li>
       </ul>
     </div>
     <hr>
@@ -221,7 +293,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Seattle, WA">
         Seattle, WA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 394
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 407
     </p>
     <hr>
     <div class="buttons">
