--- a/site/index.html
+++ b/site/index.html
@@ -18,42 +18,6 @@
   <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
   <div class="background-gradient"></div>
   <div class="card-container">
-<div class="card" data-start-time="1723127400" data-end-time="1723420800">
-  <img src="assets/cards/supernova2024.webp" alt="Supernova 2024 banner image" class="image">
-  <div class="card-content">
-    <h2>Supernova 2024</h2>
-    <h4>August 08 - August 11</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>Plup</li>
-        <li>Mang0</li>
-        <li>Zain</li>
-        <li>moky</li>
-        <li>Hungrybox</li>
-        <li>Aklo</li>
-      </ul>
-    </div>
-    <hr>
-    <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Chantilly, VA">
-        Chantilly, VA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 905
-    </p>
-    <hr>
-    <div class="buttons">
-      <a href="https://www.start.gg/tournament/supernova-2024/event/melee-1v1-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Supernova 2024">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Supernova 2024">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Supernova 2024">Stream</a>
-    </div>
-  </div>
-</div>
 <div class="card" data-start-time="1724961600" data-end-time="1725260340">
   <img src="assets/cards/eggdogInvitational.webp" alt="Eggdog Invitational banner image" class="image">
   <div class="card-content">
@@ -98,14 +62,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
+        <li>KoDoRiN</li>
         <li>Soonsay</li>
         <li>Skerzo</li>
-        <li>Zeo</li>
-        <li>TBD</li>
-        <li>Junebug</li>
         <li>Chango</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>S2J</li>
+        <li>Junebug</li>
+        <li>Stiv</li>
+        <li>Zeo</li>
       </ul>
     </div>
     <hr>
@@ -113,7 +77,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4211%20No.%203%20Rd%2C%20Richmond%2C%20BC%20V6X%202C3%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Richmond, BC">
         Richmond, BC
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 49
     </p>
     <hr>
     <div class="buttons">
@@ -137,11 +101,11 @@
         <li>Cody Schwab</li>
         <li>Jmook</li>
         <li>Plup</li>
-        <li>Trif</li>
+        <li>Wizzrobe</li>
         <li>Zain</li>
         <li>moky</li>
-        <li>Wizzrobe</li>
-        <li>Zuppy</li>
+        <li>Hungrybox</li>
+        <li>Aklo</li>
       </ul>
     </div>
     <hr>
@@ -149,7 +113,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=7000%20Kalahari%20Dr%2C%20Sandusky%2C%20OH%2044870%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Sandusky, OH">
         Sandusky, OH
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 400
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 516
     </p>
     <hr>
     <div class="buttons">
@@ -206,12 +170,12 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
+        <li>Zain</li>
+        <li>Aklo</li>
         <li>TBD</li>
         <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>moky</li>
+        <li>Junebug</li>
         <li>TBD</li>
         <li>TBD</li>
       </ul>
@@ -221,7 +185,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=12025%20Nordel%20Way%20Unit%20201%2C%20Surrey%2C%20BC%20V3W%201W1%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Surrey, BC">
         Surrey, BC
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 27
     </p>
     <hr>
     <div class="buttons">
@@ -285,7 +249,7 @@
         <li>Jmook</li>
         <li>aMSa</li>
         <li>Salt</li>
-        <li>Spark</li>
+        <li>Soonsay</li>
       </ul>
     </div>
     <hr>
@@ -293,7 +257,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Seattle, WA">
         Seattle, WA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 407
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 483
     </p>
     <hr>
     <div class="buttons">
