--- a/site/index.html
+++ b/site/index.html
@@ -18,8 +18,17 @@
   <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
   <div class="background-gradient"></div>
   <div class="card-container">
-<div class="card" data-start-time="1724961600" data-end-time="1725260340">
-  <img src="assets/cards/eggdogInvitational.webp" alt="Eggdog Invitational banner image" class="image">
+
+<div
+  class="card"
+  data-start-time="1724961600"
+  data-end-time="1725260340"
+>
+  <img
+    src="assets/cards/eggdogInvitational.webp"
+    alt="Eggdog Invitational banner image"
+    class="image"
+  />
   <div class="card-content">
     <h2>Eggdog Invitational</h2>
     <h4>August 29 - September 01</h4>
@@ -36,26 +45,58 @@
         <li>Aklo</li>
       </ul>
     </div>
-    <hr>
+    <hr />
     <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=Vancouver%2C%20BC%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Vancouver, BC">
-        Vancouver, BC
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 16
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=Vancouver%2C%20BC%2C%20Canada"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Vancouver, BC"
+      >
+        Vancouver, BC </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 16
     </p>
-    <hr>
+    <hr />
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/eggdog-invitational/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Eggdog Invitational">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Eggdog Invitational">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Eggdog Invitational">Stream</a>
+      <a
+        href="https://www.start.gg/tournament/eggdog-invitational/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Eggdog Invitational"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Eggdog Invitational"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Eggdog Invitational"
+        >Stream</a
+      >
     </div>
   </div>
 </div>
-<div class="card" data-start-time="1725087600" data-end-time="1725249600">
-  <img src="assets/cards/galintMeleeOpen2024.webp" alt="Galint Melee Open 2024 banner image" class="image">
+
+<div
+  class="card"
+  data-start-time="1725087600"
+  data-end-time="1725249600"
+>
+  <img
+    src="assets/cards/galintMeleeOpen2024.webp"
+    alt="Galint Melee Open 2024 banner image"
+    class="image"
+  />
   <div class="card-content">
     <h2>Galint Melee Open 2024</h2>
     <h4>August 31 - September 01</h4>
@@ -65,33 +106,65 @@
         <li>KoDoRiN</li>
         <li>Soonsay</li>
         <li>Skerzo</li>
-        <li>Chango</li>
+        <li>Zeo</li>
         <li>S2J</li>
         <li>Junebug</li>
         <li>Stiv</li>
-        <li>Zeo</li>
+        <li>TBD</li>
       </ul>
     </div>
-    <hr>
+    <hr />
     <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4211%20No.%203%20Rd%2C%20Richmond%2C%20BC%20V6X%202C3%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Richmond, BC">
-        Richmond, BC
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 49
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=4211%20No.%203%20Rd%2C%20Richmond%2C%20BC%20V6X%202C3%2C%20Canada"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Richmond, BC"
+      >
+        Richmond, BC </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 52
     </p>
-    <hr>
+    <hr />
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/galint-melee-open-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Galint Melee Open 2024">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Galint Melee Open 2024">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Galint Melee Open 2024">Stream</a>
+      <a
+        href="https://www.start.gg/tournament/galint-melee-open-2024/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Galint Melee Open 2024"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Galint Melee Open 2024"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Galint Melee Open 2024"
+        >Stream</a
+      >
     </div>
   </div>
 </div>
-<div class="card" data-start-time="1725627600" data-end-time="1725854340">
-  <img src="assets/cards/riptide20245.webp" alt="Riptide 2024 banner image" class="image">
+
+<div
+  class="card"
+  data-start-time="1725627600"
+  data-end-time="1725854340"
+>
+  <img
+    src="assets/cards/riptide20245.webp"
+    alt="Riptide 2024 banner image"
+    class="image"
+  />
   <div class="card-content">
     <h2>Riptide 2024</h2>
     <h4>September 06 - September 08</h4>
@@ -108,26 +181,58 @@
         <li>Aklo</li>
       </ul>
     </div>
-    <hr>
+    <hr />
     <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=7000%20Kalahari%20Dr%2C%20Sandusky%2C%20OH%2044870%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Sandusky, OH">
-        Sandusky, OH
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 516
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=7000%20Kalahari%20Dr%2C%20Sandusky%2C%20OH%2044870%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Sandusky, OH"
+      >
+        Sandusky, OH </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 531
     </p>
-    <hr>
+    <hr />
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/riptide-2024-5/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Riptide 2024">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Riptide 2024">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Riptide 2024">Stream</a>
+      <a
+        href="https://www.start.gg/tournament/riptide-2024-5/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Riptide 2024"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Riptide 2024"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Riptide 2024"
+        >Stream</a
+      >
     </div>
   </div>
 </div>
-<div class="card" data-start-time="1728129600" data-end-time="1728273540">
-  <img src="assets/cards/wavelength2024.webp" alt="Wavelength 2024 banner image" class="image">
+
+<div
+  class="card"
+  data-start-time="1728129600"
+  data-end-time="1728273540"
+>
+  <img
+    src="assets/cards/wavelength2024.webp"
+    alt="Wavelength 2024 banner image"
+    class="image"
+  />
   <div class="card-content">
     <h2>Wavelength 2024</h2>
     <h4>October 05 - October 06</h4>
@@ -144,26 +249,58 @@
         <li>TBD</li>
       </ul>
     </div>
-    <hr>
+    <hr />
     <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=219%20Littleton%20Rd%2C%20Westford%2C%20MA%2001886%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Westford, MA">
-        Westford, MA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=219%20Littleton%20Rd%2C%20Westford%2C%20MA%2001886%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Westford, MA"
+      >
+        Westford, MA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
     </p>
-    <hr>
+    <hr />
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/wavelength-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Wavelength 2024">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Wavelength 2024">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Wavelength 2024">Stream</a>
+      <a
+        href="https://www.start.gg/tournament/wavelength-2024/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Wavelength 2024"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Wavelength 2024"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Wavelength 2024"
+        >Stream</a
+      >
     </div>
   </div>
 </div>
-<div class="card" data-start-time="1729357200" data-end-time="1729486800">
-  <img src="assets/cards/patakaEsportsFestival.webp" alt="Pataka Esports Festival banner image" class="image">
+
+<div
+  class="card"
+  data-start-time="1729357200"
+  data-end-time="1729486800"
+>
+  <img
+    src="assets/cards/patakaEsportsFestival.webp"
+    alt="Pataka Esports Festival banner image"
+    class="image"
+  />
   <div class="card-content">
     <h2>Pataka Esports Festival</h2>
     <h4>October 19 - October 20</h4>
@@ -180,26 +317,58 @@
         <li>TBD</li>
       </ul>
     </div>
-    <hr>
+    <hr />
     <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=12025%20Nordel%20Way%20Unit%20201%2C%20Surrey%2C%20BC%20V3W%201W1%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Surrey, BC">
-        Surrey, BC
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 27
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=12025%20Nordel%20Way%20Unit%20201%2C%20Surrey%2C%20BC%20V3W%201W1%2C%20Canada"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Surrey, BC"
+      >
+        Surrey, BC </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 30
     </p>
-    <hr>
+    <hr />
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/pataka-esports-festival/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Pataka Esports Festival">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Pataka Esports Festival">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Pataka Esports Festival">Stream</a>
+      <a
+        href="https://www.start.gg/tournament/pataka-esports-festival/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Pataka Esports Festival"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Pataka Esports Festival"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Pataka Esports Festival"
+        >Stream</a
+      >
     </div>
   </div>
 </div>
-<div class="card" data-start-time="1730473200" data-end-time="1730692800">
-  <img src="assets/cards/luminosityMakesMovesMiami2024.webp" alt="Luminosity Makes Moves Miami 2024 banner image" class="image">
+
+<div
+  class="card"
+  data-start-time="1730473200"
+  data-end-time="1730692800"
+>
+  <img
+    src="assets/cards/luminosityMakesMovesMiami2024.webp"
+    alt="Luminosity Makes Moves Miami 2024 banner image"
+    class="image"
+  />
   <div class="card-content">
     <h2>Luminosity Makes Moves Miami 2024</h2>
     <h4>November 01 - November 03</h4>
@@ -216,26 +385,58 @@
         <li>TBD</li>
       </ul>
     </div>
-    <hr>
+    <hr />
     <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=16701%20Collins%20Ave%2C%20Sunny%20Isles%20Beach%2C%20FL%2033160%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Sunny Isles Beach, FL">
-        Sunny Isles Beach, FL
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=16701%20Collins%20Ave%2C%20Sunny%20Isles%20Beach%2C%20FL%2033160%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Sunny Isles Beach, FL"
+      >
+        Sunny Isles Beach, FL </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
     </p>
-    <hr>
+    <hr />
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/luminosity-makes-moves-miami-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Luminosity Makes Moves Miami 2024">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Luminosity Makes Moves Miami 2024">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Luminosity Makes Moves Miami 2024">Stream</a>
+      <a
+        href="https://www.start.gg/tournament/luminosity-makes-moves-miami-2024/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Luminosity Makes Moves Miami 2024"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Luminosity Makes Moves Miami 2024"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Luminosity Makes Moves Miami 2024"
+        >Stream</a
+      >
     </div>
   </div>
 </div>
-<div class="card" data-start-time="1731772800" data-end-time="1731913200">
-  <img src="assets/cards/donTParkOnTheGrass2024.webp" alt="Don't Park on the Grass 2024 banner image" class="image">
+
+<div
+  class="card"
+  data-start-time="1731772800"
+  data-end-time="1731913200"
+>
+  <img
+    src="assets/cards/donTParkOnTheGrass2024.webp"
+    alt="Don't Park on the Grass 2024 banner image"
+    class="image"
+  />
   <div class="card-content">
     <h2>Don't Park on the Grass 2024</h2>
     <h4>November 16 - November 17</h4>
@@ -252,24 +453,49 @@
         <li>Soonsay</li>
       </ul>
     </div>
-    <hr>
+    <hr />
     <p>
-      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
-        data-umami-event-location="Seattle, WA">
-        Seattle, WA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 483
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Seattle, WA"
+      >
+        Seattle, WA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 505
     </p>
-    <hr>
+    <hr />
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
-        data-umami-event-name="Don't Park on the Grass 2024">Start.gg</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="schedule-clicked" data-umami-event-name="Don't Park on the Grass 2024">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
-        data-umami-event="stream-clicked" data-umami-event-name="Don't Park on the Grass 2024">Stream</a>
+      <a
+        href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Don't Park on the Grass 2024"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Don't Park on the Grass 2024"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Don't Park on the Grass 2024"
+        >Stream</a
+      >
     </div>
   </div>
 </div>
+
+
     <!-- begin footer -->
   </div>
   <footer>
